Stable scheduler for demo 1

--- a/manifest.yml
+++ b/manifest.yml
@@ -5,4 +5,4 @@ applications:
   instances: 1
   timeout: 180
   buildpack: nodejs_buildpack
-  command: node index.js
+  command: node demo1Scheduler.js
