--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "eslint-plugin-import": "2.0.1",
     "eslint-watch": "2.1.14",
     "express": "^4.16.3",
+    "node-cron": "^1.2.1",
     "node-schedule": "^1.3.0"
+  },
+  "engines": {
+    "node":"v8.9.4"
   }
 }
